data/derived/comb/progs/unify/prog1411.ml.out
Characters 15-19:
  eval(Clamp(Sine(0.),VarX,VarY),1.,2.);;
                 ^^^^
Error: This expression has type float but an expression was expected of type
         expr
